--- a/dapp/src/_general.scss
+++ b/dapp/src/_general.scss
@@ -1,2 +1,2 @@
 /* import bootstrap to set changes */
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/bootstrap";
