[fix] add ellipsis to app title

--- a/dapp/src/parts/AppBar/app-bar.module.css
+++ b/dapp/src/parts/AppBar/app-bar.module.css
@@ -3,3 +3,10 @@
   display: flex;
   align-items: center;
 }
+
+.app-title {
+  min-width: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
