[feat] implement highlighting on the block from the tree graph

--- a/dapp/src/components/BlockHashesList/block-hashes-list.module.css
+++ b/dapp/src/components/BlockHashesList/block-hashes-list.module.css
@@ -29,3 +29,7 @@ ul.block-hashes-list > :not(li:first-child) {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.highlight {
+  background-color: var(--palette-success-main);
+}
