--- a/dapp/src/app.css
+++ b/dapp/src/app.css
@@ -4,6 +4,7 @@
   --palette-primary-main: #90caf9;
   --palette-secondary-main: #f48fb1;
   --palette-warning-main: #ff9800;
+  --palette-success-main: #4caf50;
   --palette-text-primary: #fff;
   --palette-text-secondary: rgba(255, 255, 255, 0.7);
 }
