[feat] implement loading UX

--- a/dapp/src/app.css
+++ b/dapp/src/app.css
@@ -2,6 +2,7 @@
 :root {
   --palette-background-default: #303030;
   --palette-primary-main: #90caf9;
+  --palette-primary-dark: #648dae;
   --palette-secondary-main: #f48fb1;
   --palette-warning-main: #ff9800;
   --palette-success-main: #4caf50;
