[feat] update the styling of error report component

--- a/dapp/src/app.css
+++ b/dapp/src/app.css
@@ -6,6 +6,7 @@
   --palette-secondary-main: #f48fb1;
   --palette-warning-main: #ff9800;
   --palette-success-main: #4caf50;
+  --palette-error-main: #f44336;
   --palette-text-primary: #fff;
   --palette-text-secondary: rgba(255, 255, 255, 0.7);
 }
